Tue May 20 17:27:24 2003  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkimmodule.c (gtk_im_module_init): Silently
	accept a missing gtk.immodules file, some people
	want to run without one. (#112406, patch from
	Arnaud Charlet)

Tue May 20 17:05:31 2003  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkwindow.c (gtk_window_compute_hints): Fix 
	height/width confusion (#113370, Xan Lopez)

Tue May 20 15:48:45 2003  Owen Taylor  <otaylor@redhat.com>

	* gdk/x11/gdkdnd-x11.c gdk/x11/gdkwindow-x11.c: Comprehensively
	zero all unused parts of client messages (Mainly Motif DND
	and EWMH). Also, fix a couple places where we were putting
	contents into Motif DND messages that didn't belong.
	(#113361, EWMH problem reported by Lubos Lunak)

	* gtk/gtkselection.c (_gtk_selection_request): Handle the
	case where the property type for the multiple atoms is
	ATOM_PAIR by doing the conversions ourselve. This is
	needed for Xt inter-operation.

2003-05-19 Arafat Medini <lumina@silverpen.de>

	* configure.in: Added ar to ALL_LINGUAS

2003-05-19  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtksettings.c (gtk_rc_property_parse_border,
	gtk_rc_property_parse_color, gtk_rc_property_parse_enum,
	gtk_rc_property_parse_flags, gtk_rc_property_parse_requisition):
	Add docs.

	* gtk/gtkwidget.c (gtk_widget_class_install_style_property, 
	gtk_widget_class_install_style_property_parser): Add docs. 

2003-05-17  Matthias Clasen  <maclas@gmx.de>

	* tests/prop-editor.c: Add navigation for object properties, so
	that you can easily edit the properties of the parent of a widget.
	(#113152)

Wed May 14 17:45:32 2003  Owen Taylor  <otaylor@redhat.com>

	* gdk/gdkkeysyms.h gdk/gdkkeynames.c gdk/gdkkeyuni.c:
	Patch from Vasilis Vasaitis to fix Greek_IOTAdi[a]eresis 
	inconsistency and leave the old name as an aliass (#104873)

Wed May 14 16:40:09 2003  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkframe.c (gtk_frame_set_label_widget): Patch
	from Charles Schmidt to add missing notify (#108305)
